Revertir cambios del segundo commit

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 				<div class="image-banner"></div>
 				<div class="intro">
 					<h1 class="fade-in-section slide-right">Alejandra DLS</h1>
-					<h2 class="fade-in-section slide-right"></h2>
+					<h2 class="fade-in-section slide-right">Diseño de páginas web y desarrollo de software a medida.</h2>
 					<p class="fade-in-section slide-right">Soy artista digital con más de 10 años de experiencia creando soluciones personalizadas que
 					combinan estrategia, creatividad y tecnología. He colaborado con marcas, empresas y negocios
 					de distintos sectores para diseñar experiencias digitales enfocadas en vender en línea y
